# varkon

./: CMakeLists.txt  README  src_distlog
sources/: CMakeLists.txt  Makefile  Makefile.FreeBSD  Makefile.MacOSX  Makefile.aix  Makefile.crayT3E  Makefile.hpux  Makefile.linux  Makefile.sgi  Makefile.sun  README  README_ODBC  update_versionfile  varkon_SF.kdevelop.filelist  varkon_SF.kdevelop.pcs
sources/AN/: CMakeLists.txt
sources/AN/include/: AN.h
sources/AN/src/: Makefile.AN  Makefile.FreeBSD  Makefile.MacOSX  Makefile.aix  Makefile.crayT3E  Makefile.hpux  Makefile.linux  Makefile.sgi  Makefile.sun  anaexp.c  anascan.c  anlog.c  annaml.c  anpar11.c  anpar12.c  anpar31.c  anpar40.c  anpar51.c  anpar52.c  install  install_new_routines  mbsc.c
sources/DB/: CMakeLists.txt  README  TODO
sources/DB/demo/: DBdemo1.RIT  DBdemo1.c  DBdemo2.c  DBdemo3.c  Makefile.linux  README
sources/DB/include/: DB.h  DBintern.h  common.h  gmolds.h  surdef.h
sources/DB/src/: Makefile.DB  Makefile.FreeBSD  Makefile.MacOSX  Makefile.aix  Makefile.crayT3E  Makefile.hpux  Makefile.linux  Makefile.sgi  Makefile.sun  README  db1.c  db2.c  db3.c  db4.c  dbarc.c  dbbplane.c  dbcsys.c  dbcurve.c  dbdelete.c  dbdim.c  dbfile.c  dbgroup.c  dbheader.c  dbid.c  dbjob.c  dbkey.c  dbline.c  dbmesh.c  dbpart.c  dbpoint.c  dbsurf.c  dbtext.c  dbtform.c  dbtraverse.c  dbxhatch.c
sources/EX/: CMakeLists.txt  README
sources/EX/demo/: EXdemo1.DXF  EXdemo1.c  EXdemo2.DXF  EXdemo2.c  Makefile  README
sources/EX/include/: EX.h  oldatts.h
sources/EX/src/: Makefile.EX  Makefile.FreeBSD  Makefile.MacOSX  Makefile.aix  Makefile.crayT3E  Makefile.hpux  Makefile.linux  Makefile.sgi  Makefile.sun  ex1.c  ex10.c  ex11.c  ex12.c  ex13.c  ex15.c  ex16.c  ex17.c  ex18.c  ex19.c  ex2.c  ex20.c  ex21.c  ex22.c  ex23.c  ex24.c  ex25.c  ex26.c  ex27.c  ex28.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c  exarc.c  exbplane.c  excsy.c  excugl.c  (+48 more)
sources/GE/: CMakeLists.txt  README
sources/GE/demo/: GEdemo1  GEdemo1.c  GEdemo2  GEdemo2.c  GEdemo3  GEdemo3.c  Makefile.linux  README
sources/GE/include/: GE.h  geotol.h  homop.h  surcre.h  surinc.h  surint.h
sources/GE/src/: Makefile.FreeBSD  Makefile.GE  Makefile.MacOSX  Makefile.aix  Makefile.crayT3E  Makefile.hpux  Makefile.linux  Makefile.linux_debug  Makefile.sgi  Makefile.sun  ge101.c  ge107.c  ge109.c  ge110.c  ge120.c  ge133.c  ge135.c  ge141.c  ge200.c  ge201.c  ge202.c  ge203.c  ge204.c  ge205.c  ge206.c  ge207.c  ge208.c  ge300.c  ge301.c  ge302.c  ge303.c  ge304.c  ge306.c  ge307.c  ge308.c  ge309.c  ge310.c  ge311.c  ge312.c  ge315.c  (+299 more)
sources/GP/include/: GP.h  font0.h
sources/GP/src/: Makefile.FreeBSD  Makefile.GP  Makefile.aix  Makefile.crayT3E  Makefile.hpux  Makefile.linux  Makefile.sgi  Makefile.sun  README  gp1.c  gp10.c  gp11.c  gp12.c  gp13.c  gp14.c  gp15.c  gp16.c  gp17.c  gp18.c  gp19.c  gp2.c  gp20.c  gp22.c  gp23.c  gp24.c  gp25.c  gp26.c  gp27.c  gp28.c  gp29.c  gp3.c  gp4.c  gp5.c  gp6.c  gp8.c  gp9.c
sources/IG/: CMakeLists.txt
sources/IG/include/: IG.h  debug.h  env.h  futab.h  isch.h  screen.h  svnversion.h
sources/IG/src/: Makefile.FreeBSD  Makefile.IG  Makefile.MacOSX  Makefile.aix  Makefile.crayT3E  Makefile.hpux  Makefile.linux  Makefile.sgi  Makefile.sun  README  ig1.c  ig10.c  ig11.c  ig12.c  ig13.c  ig14.c  ig15.c  ig16.c  ig17.c  ig18.c  ig19.c  ig2.c  ig20.c  ig21.c  ig22.c  ig23.c  ig24.c  ig25.c  ig26.c  ig27.c  ig28.c  ig29.c  ig3.c  ig30.c  ig31.c  ig32.c  ig33.c  ig34.c  ig35.c  ig36.c  (+45 more)
sources/MAN/include/: footer.inc  footer_SF.inc  header.inc  svnversion.inc
sources/MAN/src/: Makefile  README  index.htm  no_html_viewer.txt  varkonstyle.css
sources/MS/include/: ms.h  msdef.h
sources/MS/src/: ms1.aps  ms1.c  ms1.rc  ms10.c  ms11.c  ms12.c  ms13.c  ms14.c  ms15.c  ms16.c  ms17.c  ms18.c  ms2.c  ms3.c  ms30.c  ms31.c  ms32.c  ms33.c  ms34.c  ms35.c  ms36.c  ms37.c  ms38.c  ms4.c  ms5.c  ms6.c  ms7.c  ms8.c  ms9.c  resource.h
sources/PL/include/: PL.h  params.h
sources/PL/src/: Makefile.FreeBSD  Makefile.MacOSX  Makefile.PL  Makefile.aix  Makefile.crayT3E  Makefile.hpux  Makefile.linux  Makefile.sgi  Makefile.sun  README  epson.c  gerber.c  hp7475.c  hpcl5.c  hpgl2.c  ibmpro.c  msw32dll.c  pl1.c  pl2.c  pl3.c  pl4.c  pl5.c  pl6.c  postscript.c
sources/PM/: CMakeLists.txt
sources/PM/demo/: .PMdemo1.c.swp  Makefile  PMdemo  PMdemo.c  README  ex2.c
sources/PM/include/: PM.h  evfuncs.h  formpar.h  indef.h  mbsrout.h  my_evfuncs.h  my_formpar.h  my_mbsrout.h  my_newrout.h  newrout.h  pmstru.h  ppdef.h  stdef.h
sources/PM/src/: Makefile.FreeBSD  Makefile.MacOSX  Makefile.PM  Makefile.PM~  Makefile.aix  Makefile.crayT3E  Makefile.hpux  Makefile.linux  Makefile.sgi  Makefile.sun  README  calext.c  evact.c  eval1.c  evarc.c  evarea.c  evbpln.c  evcolor.c  evcray.c  evcsy.c  evcsys.c  evcur.c  evdim.c  evdll.c  evexit.c  evexst.c  evfile.c  evget.c  evgfuncs.c  evgprocs.c  evgrid.c  evgrp.c  evlev.c  evlin.c  evmath.c  evmatrix.c  evmbs.c  evmesh.c  evodbc.c  evoru.c  (+46 more)
sources/VU/: README
sources/VU/src/: Makefile.linux  README  env.c  error.c  file.c  iggtts.c  igwtma.c  memory.c
sources/Vlib/: Makefile
sources/Vlib/analysis/: Makefile  README  l_akedja.MBS  l_an1pos.MBS  l_anaadm.MBS  l_anaarc.MBS  l_anabpl.MBS  l_anacdm.MBS  l_anacsy.MBS  l_anacur.MBS  l_anagrp.MBS  l_analdm.MBS  l_analin.MBS  l_anamsh.MBS  l_anapoi.MBS  l_anaprt.MBS  l_anardm.MBS  l_anastr.MBS  l_anasur.MBS  l_anatrf.MBS  l_anatxt.MBS  l_anavst.MBS  l_anaxht.MBS  l_anbino.MBS  l_aneval.MBS  l_anhk.MBS  l_ankrok.MBS  l_anlgd.MBS  l_anligr.MBS  l_annagr.MBS  l_annapa.MBS  l_annorm.MBS  l_antang.MBS  l_anvink.MBS  l_area.MBS  l_cgrav.MBS  l_formel.MBS  l_inval.MBS  l_invcur.MBS  l_invon.MBS  (+19 more)
sources/Vlib/dxf/: Makefile  README  dxf_2D.MBS  dxf_3D.MBS  dxf_arc2.MBS  dxf_arc3.MBS  dxf_blk2.MBS  dxf_bsec.MBS  dxf_es2D.MBS  dxf_es3D.MBS  dxf_fac.MBS  dxf_fnam.MBS  dxf_hsec.MBS  dxf_ins2.MBS  dxf_lev.MBS  dxf_lin.MBS  dxf_mbs.MBS  dxf_out3.MBS  dxf_ply.MBS  dxf_poi.MBS  dxf_sol.MBS  dxf_tsec.MBS  (+2 more)
sources/WP/: CMakeLists.txt  README
(+1451 files in other folders)
