include_directories(
  ${CMAKE_CURRENT_SOURCE_DIRECTORY}/src
  )

add_definitions(-DUNIX)
add_definitions(-DVARKON)

set(GE_SRCS
  src/suinit.c
  src/suvecm.c
  src/sur100.c
  src/sur102.c
  src/sur104.c
  src/sur105.c
  src/sur106.c
  src/sur107.c
  src/sur108.c
  src/sur120.c
  src/sur122.c
  src/sur150.c
  src/sur160.c
  src/sur161.c
  src/sur163.c
  src/sur164.c
  src/sur170.c
  src/sur172.c
  src/sur174.c
  src/sur177.c
  src/sur178.c
  src/sur179.c
  src/sur180.c
  src/sur181.c
  src/sur182.c
  src/sur184.c
  src/sur186.c
  src/sur190.c
  src/sur191.c
  src/sur200.c
  src/sur201.c
  src/sur202.c
  src/sur203.c
  src/sur204.c
  src/sur205.c
  src/sur209.c
  src/sur210.c
  src/sur211.c
  src/sur212.c
  src/sur213.c
  src/sur214.c
  src/sur215.c
  src/sur216.c
  src/sur217.c
  src/sur219.c
  src/sur220.c
  src/sur221.c
  src/sur222.c
  src/sur223.c
  src/sur224.c
  src/sur225.c
  src/sur226.c
  src/sur227.c
  src/sur228.c
  src/sur229.c
  src/sur230.c
  src/sur232.c
  src/sur233.c
  src/sur234.c
  src/sur235.c
  src/sur236.c
  src/sur240.c
  src/sur242.c
  src/sur243.c
  src/sur245.c
  src/sur250.c
  src/sur252.c
  src/sur254.c
  src/sur256.c
  src/sur260.c
  src/sur262.c
  src/sur270.c
  src/sur271.c
  src/sur272.c
  src/sur273.c
  src/sur280.c
  src/sur288.c
  src/sur289.c
  src/sur290.c
  src/sur291.c
  src/sur292.c
  src/sur293.c
  src/sur294.c
  src/sur295.c
  src/sur296.c
  src/sur297.c
  src/sur298.c
  src/sur299.c
  src/sur300.c
  src/sur301.c
  src/sur302.c
  src/sur311.c
  src/sur360.c
  src/sur361.c
  src/sur362.c
  src/sur363.c
  src/sur365.c
  src/sur367.c
  src/sur400.c
  src/sur410.c
  src/sur412.c
  src/sur414.c
  src/sur416.c
  src/sur460.c
  src/sur461.c
  src/sur490.c
  src/sur500.c
  src/sur501.c
  src/sur502.c
  src/sur503.c
  src/sur504.c
  src/sur510.c
  src/sur511.c
  src/sur512.c
  src/sur513.c
  src/sur514.c
  src/sur520.c
  src/sur549.c
  src/sur550.c
  src/sur551.c
  src/sur552.c
  src/sur553.c
  src/sur554.c
  src/sur555.c
  src/sur556.c
  src/sur557.c
  src/sur558.c
  src/sur559.c
  src/sur600.c
  src/sur602.c
  src/sur604.c
  src/sur606.c
  src/sur608.c
  src/sur609.c
  src/sur610.c
  src/sur620.c
  src/sur622.c
  src/sur624.c
  src/sur626.c
  src/sur628.c
  src/sur629.c
  src/sur630.c
  src/sur635.c
  src/sur640.c
  src/sur650.c
  src/sur651.c
  src/sur660.c
  src/sur661.c
  src/sur670.c
  src/sur672.c
  src/sur674.c
  src/sur676.c
  src/sur680.c
  src/sur690.c
  src/sur700.c
  src/sur701.c
  src/sur702.c
  src/sur705.c
  src/sur709.c
  src/sur710.c
  src/sur711.c
  src/sur712.c
  src/sur715.c
  src/sur716.c
  src/sur717.c
  src/sur718.c
  src/sur719.c
  src/sur720.c
  src/sur721.c
  src/sur722.c
  src/sur723.c
  src/sur724.c
  src/sur725.c
  src/sur726.c
  src/sur757.c
  src/sur758.c
  src/sur759.c
  src/sur760.c
  src/sur761.c
  src/sur762.c
  src/sur763.c
  src/sur764.c
  src/sur765.c
  src/sur766.c
  src/sur767.c
  src/sur768.c
  src/sur769.c
  src/sur770.c
  src/sur771.c
  src/sur772.c
  src/sur773.c
  src/sur774.c
  src/sur775.c
  src/sur776.c
  src/sur777.c
  src/sur778.c
  src/sur779.c
  src/sur780.c
  src/sur782.c
  src/sur784.c
  src/sur785.c
  src/sur786.c
  src/sur787.c
  src/sur790.c
  src/sur792.c
  src/sur799.c
  src/sur800.c
  src/sur801.c
  src/sur850.c
  src/sur851.c
  src/sur860.c
  src/sur861.c
  src/sur863.c
  src/sur865.c
  src/sur868.c
  src/sur869.c
  src/sur890.c
  src/sur891.c
  src/sur892.c
  src/sur893.c
  src/sur900.c
  src/sur901.c
  src/sur902.c
  src/sur903.c
  src/sur904.c
  src/sur905.c
  src/sur910.c
  src/sur911.c
  src/sur912.c
  src/sur913.c
  src/sur914.c
  src/sur915.c
  src/sur916.c
  src/sur918.c
  src/sur919.c
  src/sur920.c
  src/sur921.c
  src/sur922.c
  src/sur923.c
  src/sur924.c
  src/sur925.c
  src/sur926.c
  src/sur928.c
  src/sur930.c
  src/sur940.c
  src/sur950.c
  src/sur951.c
  src/sur952.c
  src/sur960.c
  src/sumkgrw.c
  src/sur963.c
  src/sur970.c
  src/sur980.c
  src/sur982.c
  src/sur983.c
  src/sur984.c
  src/ge101.c
  src/ge107.c
  src/ge109.c
  src/ge110.c
  src/ge120.c
  src/ge133.c
  src/ge135.c
  src/ge141.c
  src/ge200.c
  src/ge201.c
  src/ge202.c
  src/ge203.c
  src/ge204.c
  src/ge205.c
  src/ge206.c
  src/ge207.c
  src/ge208.c
  src/ge300.c
  src/ge301.c
  src/ge302.c
  src/ge303.c
  src/ge304.c
  src/ge306.c
  src/ge307.c
  src/ge308.c
  src/ge309.c
  src/ge310.c
  src/ge311.c
  src/ge312.c
  src/ge315.c
  src/ge320.c
  src/ge350.c
  src/ge351.c
  src/ge352.c
  src/ge353.c
  src/ge354.c
  src/ge400.c
  src/ge401.c
  src/ge402.c
  src/ge403.c
  src/ge717.c
  src/ge718.c
  src/ge807.c
  src/ge810.c
  src/ge813.c
  src/ge815.c
  src/ge817.c
  src/gecregra.c
  src/geevale.c
  src/geevalnc.c
  src/genurbs.c
  src/gevector.c
  src/getfmath.c
  src/getfpos.c
  src/getfvec.c
  src/getfents.c
  src/getfseg.c
  src/getfang.c
  src/gemktf.c
  src/gepca.c
  src/gesort.c
  src/geinvon.c
  src/geinvtan.c
  src/geinvcrv.c
  src/gehatch.c
  src/gedim.c
  src/gelinint.c
  src/gecurint.c
  src/geintpos.c
  src/gepinc.c
  src/gesurtrim.c
  ) 

# Build GE library
add_library(ge SHARED ${GE_SRCS})

# Local Variables:
# tab-width: 8
# mode: cmake
# indent-tabs-mode: t
# End:
# ex: shiftwidth=2 tabstop=8

